added basic css

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -93,22 +93,110 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+#wrapper {
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 20px;
+	line-height: 30px;
+
+}
+
+h1{
+	font-size:220%;
+}
+h2{
+	font-size:200%;
+}
+h3{
+	font-size:180%;
+}
+h4{
+	font-size:160%;
+}
+h5{
+	font-size:140%;
+}
+h6{
+	font-size:120%;
+}
+
+#content{
+	width: 898px;
+	padding-left:31px;
+	padding-right:31px;
+	text-align:justify;
+	float: left;
 
 
+}
+
+#menu{
+	background-image:
+
+}
+
+#menu a{
+	color:white;
+
+}
+
+#menu ul {
+	margin-left:335px;
+	margin-top:0px;
+
+}
+
+#sidebar{
+	float:left;
+
+}
+
+#footer{
+	clear: both;
 
 
+}
 
+#article_heading{
+	height:86px;
+	line-height:86px;
 
+}
 
+#article_photo{
+	height:338px;
+	width:338px;
+	padding:9px;
+	margin:10px;
 
+}
 
+#article_heading h1{
+	margin:0px;
 
+}
 
+#logo{
+	width:86px;
+	height:86px;
 
+}
 
+#menu {
+	height:56px;
+	line-height:56px;
 
+}
 
+#menu li{
+	margin:0px;
 
+}
+
+#menu li{
+	display: inline;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
