--- a/src/css/main.css
+++ b/src/css/main.css
@@ -193,19 +193,46 @@ h6{
 	float: left;
 
 }
+#heating_content{
+	background-color: #eef1f5;
+	padding:9px;
+}
 
 p.first{
-	font-size:14px;
+	font-size:30px;
 	margin:0px;
-	font-weight:bold;
-
+	color:#cd7a76;
+	text-align:center;
 }
 
 p{
 	font-size:14px;
 	margin:0px;
+	text-align:center;
 
 }
+
+#heating_photos{
+	margin-left:auto;
+	margin-right:auto;
+	padding:9px;
+}
+
+#cooling_content{
+	padding:9px;
+	margin-right:auto;
+	margin-left:auto;
+
+}
+
+.cfirst{
+	font-size:30px;
+	margin:0px;
+	color:#2980b9;
+	text-align:center;
+	
+}
+
 #logo{
 	width:86px;
 	height:86px;
@@ -254,6 +281,28 @@ td {
 
 
 }*/
+
+#content_table{
+	margin-left:auto;
+	margin-right:auto;
+	padding:9px;
+
+}
+#footer{
+	background-color:#eef1f5;
+	padding:9px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.about{
+	font-size:30px;
+	margin:0px;
+	text-align:center;
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
